# django-news

./: db.sqlite3  pyproject.toml  requirements.txt
articles/: admin.py  forms.py  models.py  urls.py  views.py
articles/migrations/: 0001_initial.py  0002_auto_20200428_2059.py
articles/templates/: base.html  pagination.html
articles/templates/articles/: articles_detail.html  articles_list.html
core/: settings.py  urls.py
